delegate/gw.yml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: gateway
  namespace: delegate
spec:
  servers:
    - hosts:
        - test.delegate.org
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
