delegate/dr.yml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: a
  namespace: delegate
spec:
  host: a
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: b
  namespace: delegate
spec:
  host: b
  subsets:
    - labels:
        version: v1
      name: v1
