delegate/vs-delegate-b.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-delegate-b
  namespace: delegate
spec:
  http:
  - route:
    - destination:
        host: b
        subset: v1
