delegate/vs-main.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-main
  namespace: delegate
spec:
  hosts:
    - test.delegate.org
  gateways:
    - delegate/gateway
  http:
  - match:
    - uri:
        prefix: /a/
    delegate:
      name: vs-delegate-a
      namespace: delegate
  - match:
    - uri:
        prefix: /b/
    rewrite:
      uri: /
    delegate:
      name: vs-delegate-b
      namespace: delegate
